--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 /tmp
 /out-tsc
+/dist
 
 # dependencies
 /node_modules
@@ -16,6 +17,7 @@
 *.launch
 .settings/
 *.sublime-workspace
+.vs/
 
 # IDE - VSCode
 .vscode/*
